option java_outer_classname = "LCTerminalAuth";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal";

message TerminalAuth{
	optional string AuthCoding = 1;
}